<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date"
        android:inputType="text"
        android:padding="15dp"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/editTextHeure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/heure"
        android:inputType="number"
        android:padding="15dp"/>

    <EditText
        android:id="@+id/editTextSalle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/salle"
        android:inputType="text"
        android:padding="15dp"/>

    <EditText
        android:id="@+id/editTextClasse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/classe"
        android:inputType="text"
        android:padding="15dp"/>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sauvegarder"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/annuler"
        android:layout_marginTop="8dp"/>
</LinearLayout>
