<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="#FFFFFF"
   >

    <TextView
        android:id="@+id/agentIdTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agent_id"
        android:textSize="16sp"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/cinTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cin"
        android:textSize="14sp"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/classeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/classe"
        android:textSize="14sp"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="14sp"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/heureTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/heure"
        android:textSize="14sp"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/salleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salle"
        android:textSize="14sp"
        android:textColor="#000000" />

    <!-- Conteneur pour les boutons -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" >

        <!-- Bouton Modifier -->
        <Button
            android:id="@+id/modifyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modifier"
            android:layout_marginEnd="16dp"
            android:textColor="@android:color/white"
            android:background="@color/colorBlue"/>

        <!-- Bouton Supprimer -->
        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supprimer"
            android:textColor="@android:color/white"
            android:background="@color/colorBlue"/>
    </LinearLayout>
</LinearLayout>
